# django-downloader

./: .gitignore  README.md  build_files.sh  manage.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
downloader/: context_processors.py  version.py  views.py
downloader/static/downloader/: style.css
downloader/templates/downloader/: base.html  formats.html  index.html
videodl/: settings.py  urls.py  wsgi.py
